fix bug layout when posts too long

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -21,6 +21,7 @@
   display: inline-block;
   flex: 1;
   margin: 10px;
+  width: 70%;
 }
 
 .flex-parent-container {
